syntax = "proto3";

package general;
option go_package = "github.com/dehwyy/makoto/libs/grpc/generated/general";

message IsOkResponse {
  bool is_ok = 1;
}
